add mengting's pic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  <!--用于优化网页在移动设备上的显示-->
     <title> 4DMR-IJCAI2025</title>
 
-    <link rel="shortcut icon" href="assets/images/miga-mini.png">
+    <link rel="shortcut icon" href="assets/images/4dmr-logo-2-mini.png">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontawsom-all.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
@@ -23,7 +23,7 @@
                 <div class="covwe-inn">
                     <div class="row no-margin">
                         <!-- <div class="col-md-4 img-c">
-                            <img src="assets/images/miga.png" alt="">
+                            <img src="assets/images/4dmr-logo-1.png" alt="">
                         </div>
                         <div class="col-md-8 tit-det">
                             <h2>The 1st Challenge and Workshop for 4D Micro-Expression Recognition for Mind Reading (4DMR) </h2>
@@ -32,7 +32,10 @@
                           <!-- <div class="col-md-4 img-c">
                           <img src="assets/images/miga.png" alt="">
                         </div> -->
-                        <div class="col-md-12 tit-det">
+                        <div class="col-md-2 img-c">
+                          <img src="assets/images/4dmr-logo-2.png" alt="4DMR Logo" style="max-width: 150px; height: auto;">
+                        </div>
+                        <div class="col-md-10 tit-det">
                           <h2>The 1st Challenge and Workshop for 4D Micro-Expression Recognition for Mind Reading (4DMR) </h2>
                           <p> To be held at IJCAI 2025, 16th-22nd August 2025, Montreal, Canada </p>
                         </div>
