--- a/index.html
+++ b/index.html
@@ -638,11 +638,11 @@
 
                 <!-- Person -->
 
-                <a class="card col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" href="">
+                <a class="card col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" href="https://weimengting.github.io/">
                   <div class="card-body">
                     <div class="card-front">
                       <div class="text-center">
-                          <img class="img-fluid"  src="" />
+                          <img class="img-fluid"  src="assets/organizers/mengting.jpg" />
                           <h4>Mengting Wei</h4>
                           <p>University of Oulu, FI<br>   </p>
                       </div>
