change gif and update data chairs

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             </div>
                         </div>
 
-                         <div style="text-align: center;"> <img src="assets/dataset/iMiGUE_short2.gif" alt="Micro-gesture" width="500" height="300" class="center"></div>
+                         <div style="text-align: center;"> <img src="assets/dataset/output5.gif" alt="Micro-gesture" width="300" height="300" class="center"></div>
 
                            <p style="padding-top: 10px;">    <b>
                             Micro-expressions (ME) are a special form of facial expressions which may occur when people try to hide their true feelings for some reasons. </b>
@@ -285,10 +285,12 @@
                           </div>
                           </div>
 
-                          <div style="text-align: center;"> <img src="assets/dataset/iMiGUE_short2.gif" alt="Micro-gesture" width="500" height="300" class="center"></div>
-                          <p>
-                          Fig. 1. Micro-gesture examples. A tennis player is talking while spontanously performing the body gestures in the post-match interview.
-                          </p>
+                            <div style="text-align: center;">
+                              <img src="assets/dataset/output5.gif" alt="Micro-gesture" width="300" height="300" class="center">
+                              <p style="text-align: center;">
+                                Fig. 1. 4D micro-expressions (3D mesh + temporal changes) examples.
+                              </p>
+                            </div>
 
                           <div class="profess-cover row no-margin">
                          <div class="col-md-6">
@@ -296,7 +298,7 @@
                          </div>
                          </div>
         <p>
-          To date, while extensive research has been conducted on facial expressions, the advent of 4D facial expression analysis marks a transformative leap in the field. By capturing the temporal evolution of expressions in three-dimensional space, 4D analysis reveals the intricate dynamics of facial muscle movements over time. Unlike 2D and 3D methods, 4D analysis (3D mesh + temporal changes) excels at detecting fleeting micro-expressions, which are brief, involuntary displays of hidden emotions by incorporating multiple views and temporal information for richer and more precise data. 4D information can be leveraged to enhance accuracy and robustness of facial expression, effectively addressing challenges such as variations in lighting, pose, and noisy environments, making it ideal for real-world applications. Despite its promise, 4D facial expression research faces challenges that limit its progress. The lack of diverse and realistic datasets, particularly for spontaneous micro-expressions, constrains its applicability to practical scenarios. Moreover, the computational demands of processing the complex temporal and spatial data inherent in 4D analysis pose significant technical challenges. Existing methodologies often struggle with capturing rapid and subtle micro-expressions and adapting to real-world conditions, such as occlusions, pose variations, and noisy backgrounds. Advancing the field requires the development of innovative algorithms, efficient computational techniques, and large-scale datasets to bridge these gaps, enabling applications in healthcare, security, and education.</p>
+          To date, while extensive research has been conducted on facial expressions, the advent of 4D facial expression analysis marks a transformative leap in the field. By capturing the temporal evolution of expressions in three-dimensional space, 4D analysis reveals the intricate dynamics of facial muscle movements over time. Unlike 2D and 3D methods, 4D analysis (3D mesh + temporal changes) excels at detecting fleeting micro-expressions(Figure 1), which are brief, involuntary displays of hidden emotions by incorporating multiple views and temporal information for richer and more precise data. 4D information can be leveraged to enhance accuracy and robustness of facial expression, effectively addressing challenges such as variations in lighting, pose, and noisy environments, making it ideal for real-world applications. Despite its promise, 4D facial expression research faces challenges that limit its progress. The lack of diverse and realistic datasets, particularly for spontaneous micro-expressions, constrains its applicability to practical scenarios. Moreover, the computational demands of processing the complex temporal and spatial data inherent in 4D analysis pose significant technical challenges. Existing methodologies often struggle with capturing rapid and subtle micro-expressions and adapting to real-world conditions, such as occlusions, pose variations, and noisy backgrounds. Advancing the field requires the development of innovative algorithms, efficient computational techniques, and large-scale datasets to bridge these gaps, enabling applications in healthcare, security, and education.</p>
         </p>
         <br>
         <p>This workshop aims to explore the application of 4D technologies in facial expression analysis. It will feature the inaugural 4D micro-expression recognition challenge to propel the field forward and provide a platform for researchers to benchmark their methodologies. The workshop will delve into cutting-edge techniques for both macro- and micro-expression recognition, discuss the implications of these methodologies for global communication and AI systems, and highlight practical applications in domains such as security, healthcare, and customer service. Interactive sessions with leading experts will foster deeper insights into how 4D facial expression analysis can revolutionize our understanding of human emotions and cognitive states.</p>
@@ -624,11 +626,11 @@
 
                   <!-- Person -->
 
-                  <a class="card col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" href="">
+                  <a class="card col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" href=" https://www.linkedin.com/in/samuel-boccara-6bbb8b209/">
                     <div class="card-body">
                       <div class="card-front">
                         <div class="text-center">
-                            <img class="img-fluid"  src="" />
+                            <img class="img-fluid"  src="assets/organizers/samuel.JPG" />
                             <h4>Samuel Boccara</h4>
                             <p>University of Oulu, FI<br>   </p>
                         </div>
