update news, place,  challenge page and contact info

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="col-md-10 tit-det">
                           <h2>The 1st Challenge and Workshop for 4D Micro-Expression Recognition for Mind Reading (4DMR) </h2>
-                          <p> To be held at IJCAI 2025, 16th-22nd August 2025, Montreal, Canada </p>
+                          <p> To be held at IJCAI 2025, 16th-22nd August 2025, Montreal, Canada & Guangzhou, China </p>
                         </div>
                     </div>
                 </div>
@@ -116,13 +116,13 @@
                         </div> -->
                         <div class="refer-cov">
 
-                            <p> <b>23 March</b> : The website of 4DMR workshop & challenge is under construction...</p>
+                            <p> <b>March 23</b> : The website of 4DMR workshop & challenge is under construction...</p>
                         </div>
 
-                        <!-- <div class="refer-cov">
+                        <div class="refer-cov">
 
-                            <p> <b>29 March</b> : The Kaggle website of MiGA challenge is available for the both tracks, the training data will be released in few days.</p>
-                        </div> -->
+                          <p> <b>April 8</b> : The <a href="https://www.kaggle.com/competitions/4-dmr-workshop-challenge-2025-private/overview" target="_blank">Kaggle website</a> of 4DMR challenge is available, the training & resource data will be released in few days.</p>
+                        </div>
 
                           <!--
 
@@ -141,7 +141,7 @@
                           <h2 class="rit-titl" > Overview</h2>
 
 
-                          <p>  We hold the 1st 4DMR Workshop & Challenge to <b>explore the application of 4D technologies in facial expression analysis</b>, to be held at IJCAI 2025,  16th-22nd August 2025, Montreal, Canada.
+                          <p>  We hold the 1st 4DMR Workshop & Challenge to <b>explore the application of 4D technologies in facial expression analysis</b>, to be held at IJCAI 2025,  16th-22nd August 2025, Montreal, Canada & Guangzhou, China.
                           </p>
 
                            <p>
@@ -373,7 +373,7 @@
                                     <ul>
                                       <div style="margin-left: 20px; text-align: justify;">
                                       <li style="list-style: disc;"><b>May 31 (23:59, AoE)</b>: Paper submission deadline</li>
-                                      <li style="list-style: disc;">June 6: Notification to authors</li>
+                                      <li style="list-style: disc;"> June 6: Notification to authors</li>
                                       <li style="list-style: disc;">June 13: Camera-ready deadline</li>
                                     </div>
                                     </ul>
@@ -451,7 +451,10 @@
                   <div class="sec-title">
                                         <h2 class="decorated"><span>Challenge Details</span></h2>
                                   </div>
-                                  <span style="color: red;">TBD(details,track1/track2...)</span>
+                                  <p>Micro-expressions (MEs) are subtle, rapid, and involuntary facial movements that often occur in high-stakes scenarios or when individuals attempt to gain advantages or conceal their true emotions. Due to their extremely short duration and low intensity, MEs are difficult to detect and demand high-precision facial data.
+                                    This challenge leverages the power of 4D facial analysis—capturing the temporal evolution of facial expressions in 3D space—to uncover the complex dynamics of facial muscle movements over time. Unlike traditional 2D or static 3D approaches, 4D analysis (3D mesh + temporal sequence) excels at identifying fleeting, involuntary micro-expressions by incorporating both spatial depth and motion cues. This multi-view, temporal information enriches the data and significantly improves recognition accuracy and robustness.</p>
+                                    <br>
+                                    <p>This challenge will be organized on the <a href="https://www.kaggle.com/competitions/4-dmr-workshop-challenge-2025-private/overview" target="_blank">Kaggle Website</a>. On the Kaggle website, instructions and data will be shared, and results from participants will be submitted and ranked. The top 3 teams will be awarded certificates if the top 3 teams submit papers and are present at the workshop.</p>
 
 
                                       <!-- <p> The MiGA challenge is planned as a continuous, annual event, and each years MiGA will include different (multiple) challenge tasks, with large-scale datasets with expanding size. This year in MiGA, we will focus on two fundamental tasks of micro-gestures: <b>classification and online recognition</b>. The tracks of MiGA will be extended to leveraging those identity-insensitive cues to achieve hidden emotion understanding in the future. The challenge will be based on two spontaneous datasets: One is the SMG dataset published in FG2019 “Analyze Spontaneous Gestures for Emotional Stress State Recognition: A Microgesture Dataset and Analysis with Deep Learning” and the other is the iMiGUE dataset published in CVPR2021 “iMiGUE: An Identity-free Video Dataset for Micro-Gesture Understanding and Emotion Analysis”. In this MiGA, we plan to set two fundamental challenge tasks (Tracks), and participating teams can choose to compete on one or both tasks. The challenge will be organized on the Kaggle website. </p> -->
@@ -523,18 +526,20 @@
                                                </div>
                                            </div>  -->
 
-                    <h5>Important Dates (might slightly adjust later)</h5>
+                    <h5>Challenge Important Dates (might slightly adjust later)</h5>
                     <ul>
                         The timeline for the Challenge will be organized as follows:
-                        <li><span style="color: red;">TBD</span>. Call for Challenge online. Registration starts.</li>
-                        <li><span style="color: red;">TBD</span>. Release of training data.</li>
-                        <li><span style="color: red;">TBD</span>. Release of testing data. </li>
-                        <li><span style="color: red;">TBD</span>. Final testing data and result submission. Registration ends.</li>
-                        <li><span style="color: red;">TBD</span>. Release of challenge results.</li>
-                        <li><span style="color: red;">TBD</span>. Paper submission deadline (workshop).</li>
-                                     <!-- <li> <del>June 04, 2024.</del> June 07, 2024. Notification to authors.</li> -->
-                                     <!-- <li> <del>June 04, 2024.</del>. June 12, 2024. Camera-ready deadline.</li> -->
-                        <li> August 16th-22nd, 2025. 4DMR IJCAI 2025 Workshop, Montreal, Canada. </li>
+                        <div style="margin-left: 20px; text-align: justify;">
+                        <li style="list-style: disc;">April 8, 2025: Challenge website goes online.</li>
+                        <li style="list-style: disc;">April 10, 2025: Training and resource data released.</li>
+                        <li style="list-style: disc;"><b>April 30, 2025</b>: Team registration deadline.</li>
+                        <li style="list-style: disc;">May 3, 2025: Testing data released.</li>
+                        <li style="list-style: disc;"><b>May 17, 2025</b>: Final test submission deadline.</li>
+                        <li style="list-style: disc;">May 24, 2025: Challenge results announced.</li>
+                        <li style="list-style: disc;"><b>May 31, 2025</b>: Paper submission deadline.</li>
+                        <li style="list-style: disc;">June 6, 2025: Notification to authors.</li>
+                        <li style="list-style: disc;">August 16-22, 2025: 4DMR IJCAI 2025 Workshop, Montreal & Guangzhou.</li>
+                        </div>
                     </ul>
 </div>
               </div>
@@ -796,14 +801,18 @@
                 <div class="row no-margin"></div>
                 <div class="col-md-12 no-padding" style="text-align: center;">
                   <div style="display: inline-block; text-align: left; font-size: 16px; line-height: 1.8;">
-                  <p><b>Contact Information:</b></p>
-                  <ul style="list-style-type: none; padding: 0;">
-                    <li>• For <b>workshop inquiries</b>, please contact: <a href="mailto:yante.li@oulu.fi" style="color: #007bff; text-decoration: none;">yante.li@oulu.fi</a></li>
-                    <li>• For <b>competition-related questions</b>, please contact: 
-                    <a href="mailto:Samuel.Boccara@oulu.fi" style="color: #007bff; text-decoration: none;">Samuel.Boccara@oulu.fi</a> or 
-                    <a href="mailto:Mengting.Wei@oulu.fi" style="color: #007bff; text-decoration: none;">Mengting.Wei@oulu.fi</a>
-                    </li>
-                  </ul>
+                    <p><b>Contact Information:</b></p>
+                    <ul style="list-style-type: none; padding: 0;">
+                      <li>• For <b>workshop inquiries</b>, please contact: 
+                      <a href="mailto:yante.li@oulu.fi" style="color: #007bff; text-decoration: none;">yante.li@oulu.fi</a></li>
+                      <li>• For <b>competition-related questions</b>, please see the following:</li>
+                      <ul style="list-style-type: none; padding-left: 20px;">
+                        <li>• For <b>general challenge problems</b>, please contact: 
+                        <a href="mailto:Samuel.Boccara@oulu.fi" style="color: #007bff; text-decoration: none;">Samuel.Boccara@oulu.fi</a></li>
+                        <li>• For <b>requiring dataset</b>, please contact: 
+                        <a href="mailto:Mengting.Wei@oulu.fi" style="color: #007bff; text-decoration: none;">Mengting.Wei@oulu.fi</a></li>
+                      </ul>
+                    </ul>
                   </div>
                 </div>
                 </div>
