remove challenge rules and guidelines

--- a/index.html
+++ b/index.html
@@ -469,18 +469,18 @@
 
                                                </div>
                                            </div>
-                                           <h5>The rules and guidelines for the competition/challenge</h5>
+                                           <!-- <h5>The rules and guidelines for the competition/challenge</h5> -->
 
-                                           <b>1. Datasets</b><br>
-                                           <p><span style="color: red;">TBD</span></p>
+                                           <!-- <b>1. Datasets</b><br>
+                                           <p><span style="color: red;">TBD</span></p> -->
                                            <!-- <p> Datasets for the proposed challenge are available. The MiGA challenge is planned as a continuous annual event. Two benchmark datasets published on IJCV 2023 and CVPR 2021 are available and will be used for the challenge. The first one is the SMG dataset published in IJCV2023 Spontaneous Micro-Gesture (SMG) dataset consists of 3,692 samples of 17 MGs. The MG clips are annotated from 40 long video sequences (10-15 minutes) with 821,056 frames in total. The datasets were collected from 40 subjects while narrating a fake and real story to elicit the emotional states. The participants are recorded collected by Kinect resulting in four modalities, RGB, 3D skeletal joints, depth and silhouette.  In this workshop, we allow participants to use the skeleton, RGB or both modalities. <a style="color: blue;" href="https://www.oulu.fi/en/university/faculties-and-units/faculty-information-technology-and-electrical-engineering/center-machine-vision-and-signal-analysis"> Details about SMG dataset</a> </p>
                                                <br>
                                                  <p> The second dataset is iMiGUE published in CVPR2021. Micro-Gesture Understanding and Emotion analysis (iMiGUE) dataset consists of 32 MGs plus one non-MG class collected from post-match press conferences videos of famous tennis players. The dataset consists of 18,499 samples of MGs to detect negative and positive emotions. The MG clips are annotated from 359 long video sequences (0.5-26 minutes) with 3,765,600 frames in total. The dataset contains RGB modality and 2D skeletal joints collected from Open-Pose. In this workshop, we allow participants to use the skeleton, RGB or both modalities.
                                                  <a style="color: blue;" href="https://www.oulu.fi/en/university/faculties-and-units/faculty-information-technology-and-electrical-engineering/center-machine-vision-and-signal-analysis"> Details about iMiGUE dataset</a></p>
                                                  <br>
                                                <p>Note that: 1) not all data are used for the challenge. 2) part of the data will be selected and tailored for different challenge tasks, please follow the Kaggle competition links to obtain and process the datasets.</p> <br> -->
-                                           <b>2. Evaluation</b><br>
-                                           <p><span style="color: red;">TBD</span></p>
+                                           <!-- <b>2. Evaluation</b><br>
+                                           <p><span style="color: red;">TBD</span></p> -->
                                            <!-- <p> We deploy a cross-subject evaluation protocol. For MG classification track, 13,936 and 3,692 MG clips from iMiGUE and SMG datasets will be used for training and validating, and the remaining 4,563 MG clips from iMiGUE will be used for testing. For MG online recognition track, 252 and 40 long sequences from iMiGUE and SMG datasets will be used for training and validating, and the remaining 104 long sequences from iMiGUE will be used for testing. </p>
                                             <br>
                                             <p><b>MG classification track:</b> We report Top-1 accuracy on the testing setes on the iMiGUE dataset. Submissions will be ranked based on Top-1 accuracy on the overall split (if Top-1 results are the same, then Top-5 will be used to compare the results).</p>
@@ -490,14 +490,14 @@
                                            <p>Submission format for both tracks. Participants must submit their predictions in the a single .csv file on the Kaggle platform, more detailed instuctions for each track can be found on Kaggle. The results will be evaluated on the server and displayed on the ranking list in real-time. The organization team has the right to examine the participants source code to ensure the reproducibility of the algorithms. The final results and ranking will be confirmed and announced by organizers. </p>
                                            <br> -->
 
-                                           <div class="profess-cover row no-margin">
+                                           <!-- <div class="profess-cover row no-margin">
                                                <div class="col-md-6">
 
                                                </div>
-                                           </div>
-                                           <h5>Participation guidelines</h5>
+                                           </div> -->
+                                           <!-- <h5>Participation guidelines</h5>
                                            Please visit the Kaggle websites to join the competitions:
-                                           <p><span style="color: red;">TBD</span></p>
+                                           <p><span style="color: red;">TBD</span></p> -->
                                            <!-- <p>  <a style="color: blue;" href="https://kaggle.com/competitions/2nd-miga-ijcai-challenge-track1"> The 2nd MiGA-IJCAI Challenge Track 1: Micro-gesture Classification</a> </p>
 
                                            <p>  <a style="color: blue;" href="https://kaggle.com/competitions/2nd-miga-ijcai-challenge-track2"> The 2nd MiGA-IJCAI Challenge Track 2: Micro-gesture Online Recognition</a> </p> -->
