add workshop-invited speakers

--- a/index.html
+++ b/index.html
@@ -443,6 +443,14 @@
 
                                     <!-- <img src="assets/images/programme.PNG" alt=""> -->
                                  </div>
+                                 
+                              <div class="profess-cover row no-margin">
+                              <div class="col-md-6">
+
+                              </div>
+                          </div>
+                          <h5> Invited Speakers </h5>
+                          <span style="color: red;">TBD</span>
 
                     </div>
               </div>
